finished except for the overlap issue

--- a/styles.css
+++ b/styles.css
@@ -258,6 +258,7 @@ button:active {
 
 .highlight__wrapper {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .highlight {
@@ -265,7 +266,6 @@ button:active {
   width: calc(100% / 3);
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
 }
 
@@ -290,6 +290,7 @@ button:active {
 .highlight_subtitle {
   font-size: 20px;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 /* Featured Books */
@@ -379,11 +380,40 @@ footer {
   padding: 0 8px;
 }
 
+/* SMALL AND LARGE SMARTPHONES + TABLETS */
+@media (max-width: 768px) {
+  .header__description {
+    padding: 0 24px;
+  }
+  h1 {
+    font-size: 40px;
+  }
+  h2 {
+    font-size: 26px;
+  }
+  button {
+    font-size: 10px;
+  }
+  .book {
+    width: 50%;
+  }
+}
+
+/* SMALL AND LARGE SMARTPHONES */
 @media (max-width: 550px) {
   .nav__links {
     display: none;
   }
   .btn__menu {
     display: block;
+  }
+
+  .highlight {
+    width: 100%;
+  }
+
+  .highlight:not(:last-child) {
+    width: 100%;
+    margin-bottom: 24px;
   }
 }
